# codesentinel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  coverage.xml  pyproject.toml  sample_code.py
.github/workflows/: ci.yml
src/codesentinel/: __init__.py  analyzer.py  cli.py  models.py  report.py  rules.py
tests/: test_analyzer.py  test_models.py  test_report.py  test_rules.py
